SIT-1951 fix overflow handling in main view

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -39,7 +39,6 @@ p {
 .vmenu-on {
   width: auto;
   margin-left: 17.025em;
-  overflow-x: hidden;
 
   @media (max-width: $sitnet-mobile) {
     margin-left: 0;
